# ya-reviews-mcp

./: pyproject.toml
src/ya_reviews_mcp/reviews/: scraper.py
tests/unit/: test_scraper.py
